--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,8 @@
 MONGO_URL=mongodb://mongo:27017
 DB_NAME=riskeye
+
+
+AZURE_OPENAI_KEY=
+AZURE_OPENAI_ENDPOINT=
+AZURE_OPENAI_DEPLOYMENT_NAME=
+AZURE_OPENAI_API_VERSION=
