feat: update Docker setup to include seeding script for maintenance history

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,6 +6,6 @@ COPY requirements.txt .
 
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY .. .
+COPY . .
 
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+CMD ["bash", "-c", "python app/migrations/seed_historial_mantenimientos.py && uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload"]
