--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,8 @@
 version: "3.9"
 services:
   api:
-    build: .
+    build:
+      context: ./backend
     ports:
       - "8000:8000"
     volumes:
