feat: update environment variables and enhance README with setup instructions

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,4 @@
-MONGO_URL=mongodb://mongo:27017
-DB_NAME=riskeye
+MONGO_URL=
 
 AZURE_OPENAI_KEY=
 AZURE_OPENAI_ENDPOINT=
@@ -7,3 +6,4 @@ AZURE_OPENAI_DEPLOYMENT_NAME=
 AZURE_OPENAI_API_VERSION=
 
 ROBOFLOW_API_KEY=
+ROBOFLOW_MODEL_ENDPOINT
