feat: implement RAG system with PDF chunk extraction, FAISS index building, and new API endpoint

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,11 +1,21 @@
 FROM python:3.11-slim
 
+RUN apt-get update && apt-get install -y \
+    build-essential \
+    libgl1-mesa-glx \
+    libglib2.0-0 \
+    && rm -rf /var/lib/apt/lists/*
+
 WORKDIR /app
 
 COPY requirements.txt .
-
+RUN pip install --no-cache-dir --upgrade pip
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
-CMD ["bash", "-c", "python app/migrations/seed_historial_mantenimientos.py && uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload"]
+COPY start.sh .
+RUN chmod +x start.sh
+
+CMD ["bash", "start.sh"]
+
